# StormKit

./: .clang-format  .clangd  .gitignore  CONTRIBUTE.md  INSTALL.md  LICENSE  README.md  StormKitConfig.cmake.in  StormKitSharedTargets-debug.cmake.in  StormKitSharedTargets-release.cmake.in  StormKitSharedTargets.cmake.in  StormKitStaticTargets-debug.cmake.in  StormKitStaticTargets-release.cmake.in  StormKitStaticTargets.cmake.in  Utils.mpp  ios-llvm13-clang.ini.sample  jq  meson.build  meson_options.txt  xmake.lua
core/: meson.build  xmake.lua
core/include/storm/core/: App.hpp  Assert.hpp  Color.hpp  Color.inl  Concepts.hpp  Configure.hpp  Configure.hpp.in  ConstexprMap.hpp  Flags.hpp  Format.hpp  Fwd.hpp  Hash.hpp  HashMap.hpp  Math.hpp  Math.inl  Memory.hpp  Memory.inl  NamedType.hpp  NonCopyable.hpp  NonDefaultInstanciable.hpp  NonMovable.hpp  Numerics.hpp  Numerics.inl  Observer.hpp  Pimpl.hpp  Pimpl.inl  Platform.hpp  Ranges.hpp  ResourcesPool.hpp  ResourcesPool.inl  RingBuffer.hpp  RingBuffer.inl  Singleton.hpp  Span.hpp  State.hpp  StateManager.hpp  StateManager.inl  Strings.hpp  Subject.hpp  Subject.inl  (+8 more)
core/include/stormkit/core/: App.hpp  App.mpp  AsCast.hpp  AsCast.inl  AsCast.mpp  AssertMacro.hpp  CRTP.hpp  CRTP.inl  CRTP.mpp  Color.hpp  Color.inl  Color.mpp  Concepts.hpp  Concepts.mpp  Configure.mpp.in  ConstexprMap.mpp  Core.hpp  Core.mpp  Coroutines.hpp  Coroutines.inl  Coroutines.mpp  DynamicLoader.hpp  DynamicLoader.inl  DynamicLoader.mpp  Expected.hpp  Expected.mpp  Flags.hpp  Flags.inl  Flags.mpp  FlagsMacro.hpp  Format.hpp  Format.mpp  FormatMacro.hpp  FrozenMap.hpp  FrozenMap.inl  FrozenMap.mpp  Fstream.hpp  Fstream.inl  Fstream.mpp  Fwd.hpp  (+55 more)
core/src/: Math.cpp  State.cpp  StateManager.cpp  ThreadPool.cpp  TreeNode.cpp
core/src/posix/: DynamicLoader.cpp  ThreadUtils.cpp
core/src/win32/: DynamicLoader.cpp  ThreadUtils.cpp
engine/: meson.build  xmake.lua
engine/applications/ModelViewer/: assets.qrc  qml.qrc  xmake.lua
engine/applications/ModelViewer/qml/: MainLinux.qml  MainMacOS.qml  MainWindows.qml  WindowContent.qml
engine/applications/ModelViewer/src/: StormKitNode.cpp  StormKitNode.hpp  StormKitNode.mpp  StormKitView.cpp  StormKitView.hpp  StormKitView.mpp  main.cpp
engine/applications/ModelViewer/win32/: model_viewer.rc
engine/examples/ModelLoader/: xmake.lua
engine/examples/ModelLoader/src/: App.cpp  App.hpp  App.mpp  Constants.hpp  Constants.mpp  main.cpp
engine/include/storm/engine/: Engine.hpp  Engine.inl  Fwd.hpp  State.hpp  State.inl
engine/include/stormkit/engine/: Engine.hpp  Engine.inl  Engine.mpp  EngineObject.inl  EngineObject.mpp  Fwd.hpp
engine/samples/: meson.build
engine/samples/ModelLoading/: meson.build
engine/samples/ModelLoading/src/: App.cpp  App.hpp  Log.hpp  MainState.cpp  MainState.hpp
engine/samples/PostFX/: meson.build
engine/samples/PostFX/src/: App.hpp
engine/src/: Engine.cpp  Log.hpp  Log.mpp  Profiler.cpp  State.cpp
engine/src/data/: tiny_gltf.cpp  tiny_gltf.hpp
engine/src/render/: Camera.cpp  ForwardRenderer.cpp  ForwardTasks.cpp  Material.cpp  RenderSystem.cpp  Renderer.cpp  Tasks.cpp  Vertex.cpp
engine/src/render/3D/: FPSCamera.cpp  PbrMaterial.cpp  (+2 more)
entities/: meson.build  xmake.lua
entities/examples/: xmake.lua
entities/examples/shaders/: shader.nzsl  vertex.vert
entities/examples/src/: App.cpp  App.mpp  Components.mpp  Constants.mpp  Renderer.cpp  Renderer.mpp  Systems.cpp  Systems.hpp  main.cpp
entities/src/: Component.cpp  EntityManager.cpp  MessageBus.cpp  System.cpp
image/: meson.build  xmake.lua
image/src/: HDRImage.cpp  Image.cpp  JPEGImage.cpp  KTXImage.cpp  PNGImage.cpp  PPMImage.cpp  TARGAImage.cpp
image/src/details/: HDRImage.cpp  HDRImage.hpp  HDRImage.mpp  JPEGImage.cpp  JPEGImage.hpp  JPEGImage.mpp  KTXImage.cpp  KTXImage.hpp  KTXImage.mpp  PNGImage.cpp  PNGImage.hpp  PNGImage.mpp  PPMImage.cpp  PPMImage.hpp  PPMImage.mpp  QOIImage.cpp  QOIImage.hpp  QOIImage.mpp  TARGAImage.cpp  TARGAImage.hpp  TARGAImage.mpp
log/: meson.build  xmake.lua
log/examples/console_logger/: CMakeLists.txt
log/examples/consolelogger/: xmake.lua
log/examples/file_logger/: CMakeLists.txt
log/examples/filelogger/: xmake.lua
log/src/: ConsoleLogger.cpp  FileLogger.cpp  LogColorizer.cpp  LogColorizer.hpp  LogColorizer.mpp  LogHandler.cpp  Logger.cpp
log/src/posix/: LogColorizer.cpp
log/src/win32/: LogColorizer.cpp
main/: meson.build  xmake.lua
main/src/linux/: Main.cpp
main/src/macOS/: Main.mm
main/src/win32/: Main.cpp
module/: meson.build
module/src/: AbstractModule.cpp  Module.cpp
module/src/posix/: ModuleImpl.cpp  ModuleImpl.hpp
module/src/win32/: ModuleImpl.cpp  ModuleImpl.hpp
render/: meson.build  xmake.lua
render/examples/Triangle/: xmake.lua
render/samples/: meson.build
render/samples/Texture/: meson.build
render/samples/Triangle/: meson.build
render/samples/UniformBuffer/: meson.build
render/src/: Log.hpp  Log.mpp
render/src/core/: CommandBuffer.cpp  Device.cpp  DynamicLoader.cpp  Instance.cpp  OffscreenSurface.cpp  PhysicalDevice.cpp  Queue.cpp  Surface.cpp  Types.cpp  Vulkan.cpp  WindowSurface.cpp
render/src/pipeline/: AbstractPipeline.cpp  ComputePipeline.cpp  ComputePipelineState.cpp  DescriptorPool.cpp  DescriptorSet.cpp  DescriptorSetLayout.cpp  Framebuffer.cpp  GraphicsPipeline.cpp  GraphicsPipelineState.cpp  PipelineCache.cpp  RenderPass.cpp  RenderPassDescription.cpp  VertexBindingDescription.cpp  VertexInputAttributeDescription.cpp
render/src/resource/: Buffer.cpp  HardwareBuffer.cpp  Image.cpp  ImageView.cpp  Sampler.cpp  Shader.cpp  Texture.cpp  TextureView.cpp
render/src/sync/: Fence.cpp  Semaphore.cpp
window/: meson.build
window/samples/: meson.build
window/samples/simple_window/: meson.build
window/src/: AbstractWindow.cpp  AbstractWindow.hpp  AbstractWindow.inl  EventHandler.cpp  Log.hpp  Window.cpp
window/src/Linux/: Utils.cpp  Utils.hpp
window/src/Win32/: Log.hpp  Utils.cpp  Utils.hpp  Win32Keyboard.cpp  Win32Keyboard.hpp  Win32Mouse.cpp  Win32Mouse.hpp  Win32Window.cpp  Win32Window.hpp
(+1249 files in other folders)
